working on the shuten trail floor guide

--- a/html/dungeon/shuten_trail_hard.html
+++ b/html/dungeon/shuten_trail_hard.html
@@ -24,14 +24,12 @@
                 Dungeon you can enter after clearing Shuten Trail Mid.
               </p>
               <p>
-                Show Saigo the Torn Manuscript over at the beach West<br>
-                of Napus Village to transform it into the Ancient Manuscript,<br>
-                and then place the Manuscript on the small shrine next to<br>
-                the waterfall in the upper-right corner of Napus Village.
+                Show Saigo the Torn Manuscript over at the beach West of Napus Village<br>
+                to transform it into the Ancient Manuscript, and then place the Manuscript<br>
+                on the small shrine next to the waterfall in the upper-right corner of Napus Village.
               </p>
               <p>
-                There are a total of 15 floors with 2 of them being<br>
-                boss fights, and there is a carry-in limit of 11 items.<br>
+                The dungeon has a total of 15 floors with 2 boss fights, and a carry-in limit of 11 items.<br>
                 You can bring any number of allies with you.
               </p>
               <p>
@@ -39,9 +37,9 @@
                 weren't present in the first two trails will make an appearance.
               </p>
               <p>
-                However, the items you find in this dungeon are generally<br>
-                better than the first two trails, and you can synthesize using<br>
-                Mixer monsters, so it's worth entering despite the added challenge.
+                However, the items you find in this dungeon are generally better than<br>
+                the first two trails, and you can synthesize using Mixer monsters,<br>
+                so it's worth entering despite the added challenge.
               </p>
               <p>
                 It's possible to clear this dungeon without carry-in items,<br>
@@ -150,33 +148,144 @@
           <ol>
             <li>
               <p>
-                Bracelets appear.
+                Bracelets can be found on the ground in an unidentified state on this trail.<br>
+                Bracelets offer powerful effects when equipped that can help you on your adventures<br>
+                such as Scout Bracelet, which allows you to see where items and enemies are on the map.<br>
+                Note that bracelets can shatter in Shiren 2, so unequip them when you don't need their effects.
               </p>
             </li>
             <li>
               <p>
-                Can synthesize.
+                Synthesis is now possible, thanks to Mixer monsters and Synthesis Pots being available.<br>
+                Mixer appears starting on 9F, so you can synthesize there using items you picked up in earlier trails.<br>
+                Note that unlike Mixer monsters, Synthesis Pots cannot combine different categories. (ex: Weapon + Grass)<br>
+                If you have a Pierce Bracelet equipped, be sure to unequip it before throwing a Synthesis Pot at a wall.
               </p>
             </li>
             <li>
               <p>
-                Golden Interval.
+                Golden Intervals can be found starting with this dungeon.<br>
+                Golden Stairs may be buried in a wall between floors 3~6F, which lead to the Golden Interval area.<br>
+                You likely don't have a way to break walls to search for the stairs at this point in the game, but once you<br>reach Onigashima, you can obtain Wall Collapse Scrolls, which turns the current floor into one giant room.
               </p>
             </li>
             <li>
               <p>
-                Perfect grade materials.
+                The first half of Shuten Trail Hard has "Good" grade materials,<br>
+                and "Perfect" grade materials can be found during the second half.<br>
+                "Perfect" grade materials take up 2 inventory slots, so it can be helpful to bring Mamo along.<br>
+                If you simply want to hurry through the story, the most efficient route would be<br>
+                Shuten Trail Hard for the first half, and Shuten Trail Mid for the second half.
               </p>
             </li>
           </ol>
           <h2 id="important_items">Important Items</h2>
           <h3 id="weapon">Weapon</h3>
-          <p></p>
+          <p>
+            Aim to create a Katana+5 with the 三 and 回 seals as a base.<br>
+            You can then select from options like ド, 仏, 目, or 幸 for the remaining 3 synthesis slots.<br>
+            If 回 is too difficult, you can substitute it with multiple 弟.
+          </p>
+          <table>
+            <tr>
+              <th>Seal</th>
+              <th>Item</th>
+              <th>Info</th>
+            </tr>
+            <tr>
+              <td>三</td>
+              <td>Razor Wind</td>
+              <td>Lets you attack in a 3-way pattern.</td>
+            </tr>
+            <tr>
+              <td>回</td>
+              <td>Healing Sword</td>
+              <td>Heal HP equal to 1/3 of the amount of damage you dealt.<br>Synthesize Herb, Otogiriso, and Life Grass onto a weapon to turn it into a Healing Sword.</td>
+            </tr>
+            <tr>
+              <td>ド</td>
+              <td>Drain Buster</td>
+              <td>Deal x1.5 damage to Drain monsters. (ex: Slugs, Puppets, Scorpion)</td>
+            </tr>
+            <tr>
+              <td>仏</td>
+              <td>Ghost Sickle</td>
+              <td>Deal x1.5 damage to Ghost monsters. (ex: Yamikichi, Gale, Pumphantasm)</td>
+            </tr>
+            <tr>
+              <td>目</td>
+              <td>Cyclops Killer</td>
+              <td>Deal x1.5 damage to One-eyed monsters. (ex: Ironhead, Golem, Gazer)</td>
+            </tr>
+            <tr>
+              <td>弟</td>
+              <td>Otogiriso</td>
+              <td>Restore a fixed amount of HP when you deal damage. (4, 7, 10, 13, 15)</td>
+            </tr>
+            <tr>
+              <td>幸</td>
+              <td>Happy Grass</td>
+              <td>Gain more exp when you defeat monsters. (+10%, +40%, +70%, +100%, +130%)<br>You'll want at least 2~3 seals to make it noteworthy.</td>
+            </tr>
+          </table>
+          <p>
+            You might be able to obtain a Dotanuki or Spark Sword from a Surprise Pot on 15F of this trail.<br>
+            If you do so, go ahead and switch to using it as a main weapon instead of a Katana.
+          </p>
+          <p>
+            You could also use Secret Phrases to obtain items like Manji-Kabura, Homing Blade, and Angel Seed<br>
+            to create a powerful weapon very early, but it does break the balance of the game if you do so.
+          </p>
           <h3 id="shield">Shield</h3>
-          <p></p>
+          <p>
+            Aim to create a Beetle Shield+5 with one 皮 and at least 3 弟 seals as a base.<br>
+            Other options are somewhat limited at this point in the game,<br>
+            but you could add a バ seal to increase your damage output a bit.
+          </p>
+          <table>
+            <tr>
+              <th>Seal</th>
+              <th>Item</th>
+              <th>Info</th>
+            </tr>
+            <tr>
+              <td>皮</td>
+              <td>Leather Shield</td>
+              <td>Halves hunger rate.</td>
+            </tr>
+            <tr>
+              <td>弟</td>
+              <td>Otogiriso</td>
+              <td>Restore a fixed amount of HP when you receive damage. (4, 7, 10, 13, 15)</td>
+            </tr>
+            <tr>
+              <td>バ</td>
+              <td>Counter Shield</td>
+              <td>Reflect 30% of the damage you received back at the enemy.</td>
+            </tr>
+          </table>
+          <p>
+            You could use Leather Shield as a base instead of a Beetle Shield too,<br>
+            if you want to prevent the loss of upgrade value due to rust.
+          </p>
+          <p>
+            You could also use Secret Phrases to obtain a powerful Fuuma Shield early,<br>
+            but it does break the balance of the game if you do so.
+          </p>
           <h2 id="floor_guide">Floor Guide</h2>
           <h3 id="waterfall_basin">01~02F Waterfall Basin (Shuffle)</h3>
-          <p></p>
+          <p>
+            Monsters include <a href="/shiren2/html/system/monster.html#mamel_family">Mamel</a>, <a href="/shiren2/html/system/monster.html#mamel_family">Pit Mamel</a>, and <a href="/shiren2/html/system/monster.html#chintala_family">Chintala</a>
+          </p>
+          <p>You shouldn't have much trouble dealing with them at this point.</p>
+          <p>
+            If you're feeling adventurous, you could throw a Happy Grass at a Pit Mamel<br>
+            to level it up into a Cave Mamel, and then either use a Knockback Staff or<br>
+            throw Gitan or a shield with at least 5 defense to one-shot it and gain 500 experience.
+          </p>
+          <p>
+            Recommended to get Shiren up to level 4 before proceeding to 3F.
+          </p>
           <h3 id="mountain_cave">03~04F Mountain Cave</h3>
           <p></p>
           <h3 id="hoof_rock_wall">05~06F Hoof Rock Wall</h3>
