--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
         <div>
-          <p>Welcome! This is an info site for Shiren 2 (N64).</p>
+          <p>Welcome! This is wiki site for Shiren 2 (Nintendo 64) to accompany the English patch.</p>
           <p>Please do not copy information from this site elsewhere without asking.</p>
           </p>
         </div>
