--- a/html/dungeon/shuten_trail_hard.html
+++ b/html/dungeon/shuten_trail_hard.html
@@ -279,7 +279,7 @@
           </p>
           <p>You shouldn't have much trouble dealing with them at this point.</p>
           <p>
-            If you're feeling adventurous, you could throw a Happy Grass at a Pit Mamel<br>
+            If you're feeling adventurous, you could throw Happy Grass at a Pit Mamel<br>
             to level it up into a Cave Mamel, and then either use a Knockback Staff or<br>
             throw Gitan or a shield with at least 5 defense to one-shot it and gain 500 experience.
           </p>
@@ -287,15 +287,53 @@
             Recommended to get Shiren up to level 4 before proceeding to 3F.
           </p>
           <h3 id="mountain_cave">03~04F Mountain Cave</h3>
-          <p></p>
+          <p>
+            <a href="/shiren2/html/system/monster.html#mamel_family">Piko Hammer</a> and <a href="/shiren2/html/system/monster.html#mamel_family">Slug</a> make an appearance starting on 3F.
+          </p>
+          <p>
+            Piko Hammer's attacks deal ~10 damage if you don't have a shield equipped.
+          </p>
+          <p>
+            Slugs appear between 3~5F, and can lower Shiren's strength with their licks,<br>
+            so use projectiles to defeat them from a distance if possible.
+          </p>
+          <p>
+            There's a 30% chance for Golden Stairs to be hidden inside a wall between 3~6F.<br>See the Golden Interval section of this page for more details.
+          </p>
           <h3 id="hoof_rock_wall">05~06F Hoof Rock Wall</h3>
-          <p></p>
+          <p>Hunt <a href="/shiren2/html/system/monster.html#mamel_family">Zaloklefts</a> between 6~8F for items.</p>
+          <p>Watch out for <a href="/shiren2/html/system/monster.html#mamel_family">Bow Boy</a>'s ranged attacks.</p>
           <h3 id="dark_night_cavern">07~08F Dark Night Cavern</h3>
-          <p></p>
+          <p>This is where monsters begin to hit pretty hard.</p>
+          <p><a href="/shiren2/html/system/monster.html#mamel_family">Tiger Tosser</a>, <a href="/shiren2/html/system/monster.html#mamel_family">Boy Cart</a>, and <a href="/shiren2/html/system/monster.html#mamel_family">Warukichi</a> can deal 15~20 damage per hit if your shield is weak.</p>
+          <p>If the generated map is one large room, head for the stairs instead of trying to collect all items.</p>
+          <p>Continue to hunt Zaloklefts for items if you find yourself able to take on the other monsters.</p>
           <h3 id="shuten_halfway">Shuten Halfway</h3>
-          <p></p>
+          <p>Hone your weapon, and buy HP recovery items and food from the Trader's Shop.</p>
+          <p>
+            The Blacksmith can erase synthesis seals or mend cracked bracelets, so keep that in mind<br>
+            if you accidentally synthesize a wrong item, or if one of your favorite bracelets crack.<br>
+            Erasing seals costs 1000 Gitan, and mending bracelets costs 500 Gitan.
+          </p>
+          <p>
+            Also remember, you can select Shuten Trail Easy or Shuten Trail Mid<br>
+            from Shuten Halfway if you're finding Shuten Trail Hard to be too difficult.
+          </p>
           <h3 id="cliff_wind_hole">09F Cliff Wind Hole</h3>
-          <p></p>
+          <p>
+            <a href="/shiren2/html/system/monster.html#mamel_family">Mixer</a> makes an appearance, and with it comes the ability to synthesize equipment.<br>
+            Note that Mixer's HP and attack increases with each item it swallows.<br>
+            Use items like Dragon Grass, Decoy / Slumber Scrolls, or Knockback Staff to avoid damage.
+          </p>
+          <p>
+            Synthesizing a Herb, Otogiriso, and Life Grass onto a weapon will transform it into a Healing Sword.<br>
+            It has an exceptional ability that restores HP equal to 1/3 of the damage you deal to monsters.<br>Try making it if you have the items on hand, or come back for it later.
+          </p>
+          <p>
+            "Perfect" grade materials can be found for the remainder of the dungeon.<br>
+            They take up 2 inventory slots, so you may struggle to carry many if you don't have Mamo with you.<br>
+            Note that Mamo can carry up to 5 "Perfect" grade materials, if you utilize all of their inventory space.
+          </p>
           <h3 id="ancient_ruins">10~11F Ancient Ruins (Shuffle)</h3>
           <p></p>
           <h3 id="headwater_cave">12F Headwater Cave</h3>
