working on the shuten trail hard guide

--- a/html/dungeon/shuten_trail_hard.html
+++ b/html/dungeon/shuten_trail_hard.html
@@ -275,7 +275,7 @@
           <h2 id="floor_guide">Floor Guide</h2>
           <h3 id="waterfall_basin">01~02F Waterfall Basin (Shuffle)</h3>
           <p>
-            Monsters include <a href="/shiren2/html/system/monster.html#mamel_family">Mamel</a>, <a href="/shiren2/html/system/monster.html#mamel_family">Pit Mamel</a>, and <a href="/shiren2/html/system/monster.html#chintala_family">Chintala</a>
+            Monsters include <a href="/shiren2/html/system/monster.html#mamel_family">Mamel</a>, <a href="/shiren2/html/system/monster.html#mamel_family">Pit Mamel</a>, and <a href="/shiren2/html/system/monster.html#chintala_family">Chintala</a>.
           </p>
           <p>You shouldn't have much trouble dealing with them at this point.</p>
           <p>
@@ -331,18 +331,86 @@
           </p>
           <p>
             "Perfect" grade materials can be found for the remainder of the dungeon.<br>
-            They take up 2 inventory slots, so you may struggle to carry many if you don't have Mamo with you.<br>
+            They take up 2 inventory slots, so you may struggle to carry them if you don't have Mamo with you.<br>
             Note that Mamo can carry up to 5 "Perfect" grade materials, if you utilize all of their inventory space.
           </p>
           <h3 id="ancient_ruins">10~11F Ancient Ruins (Shuffle)</h3>
-          <p></p>
+          <p>
+            Monsters include <a href="/shiren2/html/system/monster.html#mamel_family">Mixer</a>, <a href="/shiren2/html/system/monster.html#mamel_family">Ironhead</a>, and <a href="/shiren2/html/system/monster.html#chintala_family">Golem</a>, along with <a href="/shiren2/html/system/monster.html#chintala_family">Kengo</a> on 11F.
+          </p>
+          <p>
+            Both Ironhead and Golem are one-eyed monsters, so a<br>
+            Cyclops Killer (目 seal) will allow you to deal x1.5 damage to them.<br>
+          </p>
+          <p>
+            Ironhead can attack targets up to 3 tiles away in a straight line, so you'll<br>
+            want to move up and down or left and right to lure it closer without taking damage.<br>
+            It may level up into a Chainhead if it defeats a monster that gets between Shiren and itself.
+          </p>
+          <p>
+            Kengo's special attack flings your equipped shield away, making it fly behind you.<br>
+            Either defeat it using projectiles, or unequip your shield beforehand to avoid losing it.
+          </p>
+          <p>
+            Mixer's spawn rate is lower than 9F, but there should still be enough to finish synthesizing.
+          </p>
           <h3 id="headwater_cave">12F Headwater Cave</h3>
-          <p></p>
+          <p>
+            Rematch against the 3 <a href="/shiren2/html/system/monster.html#chintala_family">Water Striders</a> from Shuten Trail Mid.<br>
+            However, the exit is open this time, so you could ignore them altogether.<br>
+            If you do fight them, be sure to save some items for the second boss fight.
+          </p>
+          <p>
+            Side note, but the Water Striders will stop spawning once you clear Onigashima.
+          </p>
           <h3 id="sacred_silver_peak">13~14F Sacred Silver Peak (Shuffle)</h3>
-          <p></p>
+          <p>
+            Monsters include <a href="/shiren2/html/system/monster.html#mamel_family">Wolf Droid</a>, <a href="/shiren2/html/system/monster.html#mamel_family">King Tusker</a>, <a href="/shiren2/html/system/monster.html#chintala_family">Whirlwind</a>, <a href="/shiren2/html/system/monster.html#mamel_family">Bat Kangaroo</a>, <a href="/shiren2/html/system/monster.html#mamel_family">Stone Beast</a>, and <a href="/shiren2/html/system/monster.html#mamel_family">Bone Dragon</a>.
+          </p>
+          <p>
+            Wolf Droid tosses bombs at Shiren from a distance.<br>
+            It may defeat other monsters near Shiren as a result of the explosions, causing it to level up.<br>
+            The difference in stats between Wolf Droid and Gorilla Bot is immense,<br>
+            so you likely won't stand a chance if you try to fight it. Just run to the exit.
+          </p>
+          <p>
+            King Tusker can swing a Seal Staff for its special attack.<br>
+            Shiren won't be able to read scrolls or eat grasses when he is sealed.<br>
+            Hold B + A to pass turns while standing in place to quickly recover from the status effect.
+          </p>
+          <p>
+            Whirlwind moves at double speed, and can attack twice per turn.<br>
+            It shouldn't be too bad if you made sure to synthesize multiple 弟 seals onto your shield earlier.
+          </p>
+          <p>
+            Bat Kangaroo can swing a Swift Staff at other monsters to increase their movement speed.<br>
+            Defeat it quickly before you find yourself surrounded by monsters moving at double or triple speed.
+          </p>
           <h3 id="queen_spiders_nest">15F Queen Spider's Nest</h3>
-          <p></p>
+          <p>
+            
+          </p>
           <h4 id="queen_spider_stats">Queen Spider Stats</h4>
+          <table>
+            <tr>
+              <th>Name</th>
+              <th>HP</th>
+              <th>ATK</th>
+              <th>DEF</th>
+              <th>EXP</th>
+              <th>Element</th>
+              <th>Notes</th>
+            </tr>
+            <tr>
+              <td>Queen Spider</td>
+              <td>170</td>
+              <td>30</td>
+              <td>30</td>
+              <td>200</td>
+              <td>-</td>
+              <td><p>Doesn't move during the boss fight unless sealed.<br>Occasionally uses a special attack that spawns 3 Armor Spiders.</p></td>
+            </tr>
+          </table>
           <h2 id="monsters">Monsters</h2>
           <div class="dungeon_monster_table">
             <table>
