finished shuten trail hard guide

--- a/html/dungeon/shuten_trail_hard.html
+++ b/html/dungeon/shuten_trail_hard.html
@@ -358,7 +358,7 @@
           <p>
             Rematch against the 3 <a href="/shiren2/html/system/monster.html#chintala_family">Water Striders</a> from Shuten Trail Mid.<br>
             However, the exit is open this time, so you could ignore them altogether.<br>
-            If you do fight them, be sure to save some items for the second boss fight.
+            If you do fight them, be sure to save some items for the later boss fight.
           </p>
           <p>
             Side note, but the Water Striders will stop spawning once you clear Onigashima.
@@ -388,7 +388,31 @@
           </p>
           <h3 id="queen_spiders_nest">15F Queen Spider's Nest</h3>
           <p>
-            
+            Boss fight against Queen Spider. She has 170 HP, and can summon Armor Spiders to aid her in battle.
+          </p>
+          <p>
+            Armor Spiders will continue to spawn as long as she is alive,<br>
+            so you'll want to move into a hallway asap before you're surrounded by them.<br>
+            All Armor Spiders will vanish when Queen Spider is defeated.
+          </p>
+          <p>
+            An easy way to defeat her is to eat Warp Grass to warp to the boss room, and then read a<br>
+            Blaze Scroll or swing a Fire Staff and wait until she burns up while staying out of her attack range.<br>
+            You could also read a Decoy Scroll and deal damage to her while she spends time attacking shadows.
+          </p>
+          <p>
+            ※ An item called Surprise Pot appears on this floor, often dropped by Armor Spiders.<br>
+            It contains monsters, items, or pent-up anger, which creates an explosion.<br>
+            Many rare items can be obtained from it, including Happy Grass, Dotanuki, and Heal Bracelet.<br>
+            Go ahead and throw the Surprise Pots you find at the wall after defeating Queen Spider,<br>
+            but be ready to take on Armor Spiders if they happened to be inside the pot.<br>
+          </p>
+          <p>
+            ※ Queen Spider and Surprise Pots will no longer be present in this room after clearing Onigashima.<br>
+            However, you can still obtain Surprise Pots by summoning Armor Spiders with an ally Summon Ninja,<br>
+            and then make the Armor Spiders trip using an ally Armordillo.<br>
+            Though by the time you reach post-game, you can find better items<br>
+            in post-game dungeons, so it may be more effort than it's worth.
           </p>
           <h4 id="queen_spider_stats">Queen Spider Stats</h4>
           <table>
@@ -1436,7 +1460,69 @@
             </ul>
           </div>
           <h2 id="floor_guide">Golden Interval</h2>
-          <h3 id="golden_interval_items">Items</h3>
+          <p>
+            There's a 30% chance for Golden Stairs to be hidden inside of a wall between 3~6F.<br>You'll return to Shuten Trail Hard 7F after claiming the treasure and exiting from the Golden Interval area.
+          </p>
+          <p>
+            You'll likely want to wait until you unlock Onigashima so that you can obtain Wall Collapse Scrolls to make<br>
+            searching for the stairs easier, but if you're determined to find it before then, here are some methods:
+          </p>
+          <ul>
+            <li><p>Use the Pickaxe you can obtain from a Secret Phrase.</p></li>
+            <li><p>Roll Cannonballs at the wall to break wall tiles with explosions.</p></li>
+            <li><p>Synthesize a shield with 爆 (Blast Shield) and multiple 弟 (Otogiriso) seals,<br>and level up a Boy Cart into a Pop Tank and have it destroy walls.</p></li>
+            <li><p>Swing a Knockback Staff toward a Landmine to trigger it against walls.</p></li>
+          </ul>
+          <p>
+            The range of monsters varies a lot for the Golden Interval of Shuten Trail Hard.<br>
+            You'll want to prepare for the worst case scenario of Wolf Droid leveling up<br>
+            into a Gorilla Bot, or Ironhead leveling up into a Chainhead.
+          </p>
+          <p>
+            Riceballs do not appear, so you'll want to bring enough food to last the entire trip.<br>
+            Instead, there are typically many Heaven and Earth scrolls, along with Synthesis Pots.<br>
+            It's a good area to visit to strengthen equipment if you're struggling with Onigashima.
+          </p>
+          <p>
+            Onigiri Sword and Gamarra Whip are exclusively found in treasure chests at the end of this dungeon's Golden Interval.<br>
+            There's also a chance for the treasure to be a No Hunger Bracelet, which stops natural hunger depletion altogether.<br>
+            Synthesizing Onigiri Sword onto your main weapon will effectively make hunger a non-issue as well.
+          </p>
+          <h3 id="golden_interval_items">Golden Interval Items</h3>
+          <table class="golden_interval_items">
+            <tr>
+              <th>Category</th>
+              <th>Item Name</th>
+            </tr>
+            <tr>
+              <td>Weapon</td>
+              <td>Razor Wind, Drain Buster, Cyclops Killer, Ghost Sickle, Katana</td>
+            </tr>
+            <tr>
+              <td>Shield</td>
+              <td>Leather Shield, Counter Shield, Scale Shield<br>Blast Shield, Tribal Shield, Beetle Shield</td>
+            </tr>
+            <tr>
+              <td>Bracelet</td>
+              <td>Bullseye Bracelet</td>
+            </tr>
+            <tr>
+              <td>Scroll</td>
+              <td>Heaven Scroll, Earth Scroll, Sanctuary Scroll, Slumber Scroll</td>
+            </tr>
+            <tr>
+              <td>Pot</td>
+              <td>Synthesis Pot</td>
+            </tr>
+            <tr>
+              <td>Gitan</td>
+              <td>10~2000 Gitan</td>
+            </tr>
+            <tr>
+              <td>Treasure</td>
+              <td>Onigiri Sword, Gamarra Whip, No Hunger Bracelet</td>
+            </tr>
+          </table>
         </div>
       </div>
       <div id="footer" class="box footer"></div>
