working on Onigashima guide

--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -26,21 +26,17 @@
                 attacked as a group, with the goal of meeting up inside.
               </p>
               <p>
-                You could say this is where the game truly begins, with<br>
-                the appearance of Monster Houses, more unidentified<br>
-                items including scrolls, and a far deeper dungeon without<br>
-                the safety of an interval area like Shuten Halfway.
+                You could say this is where the game truly begins, with the appearance<br>of Monster Houses, more unidentified items including scrolls, and a far<br>deeper dungeon without the safety of an interval area like Shuten Halfway.
               </p>
               <p>
                 Adding to the difficulty is a lower carry-in limit of 7 items.<br>
-                Think carefully about what items you want to have<br>
-                on hand, and use them to the best of your ability.
+                Think carefully about what items you want to have on hand.
               </p>
               <p>
                 There is a boss fight against Galaha on 16F, and<br>
                 then a final showdown against Boss Oni on 25F.<br>
-                Defeating Boss Oni wraps up the main story and<br>
-                shows the ending, and your save data gains an icon.
+                Defeating Boss Oni wraps up the main story,<br>
+                and your save file gains a new Boss Oni icon.
               </p>
               <ul>
                 <li><a href="#dungeon_overview">Dungeon Overview</a></li>
@@ -161,24 +157,29 @@
           <ol>
             <li>
               <p>
-                All Floors are random dungeon style maps with fog.
+                All floors inside Onigashima use the random dungeon style map generation, and have fog in hallways.<br>Every post-game dungeon uses the same style of map generation as Onigashima.
               </p>
             </li>
             <li>
               <p>
-                Monster houses from 3F.
+                Monster houses make an appearance for the first time.<br>
+                They have a random chance to spawn between 3~24F, excluding boss floors.<br>
+                Monster Houses can be challenging depending on how you tackle them,<br>
+                but they're a great way to obtain a bunch of items in short order.<br>
               </p>
             </li>
             <li>
               <p>
-                New traps like flood, monster, pitfall.
+                Flood Trap, Monster Trap, and Pitfall make an appearance for the first time.<br>
+                You'll want to perform an empty attack before each step inside a Monster House to avoid accidentally<br>
+                stepping on one of them, resulting in either falling to the next floor, or transforming all items into monsters.
               </p>
             </li>
             <li>
               <p>
-                No allies first time, but can join up.<br>
-                Mamo retrieves lost equipment before post-game<br>
-                with a 25% upgrade value / seal penalty.
+                You won't have any allies when you enter Onigashima for the first time, but you might<br>run into some of them while exploring the dungeon, in which case you can join back up.<br>
+                If you collapse in Onigashima during the story, Mamo will retrieve the equipment you lost.<br>
+                You can pick the equipment up by talking to Mamo in the morning, though<br> note that the equipment will have a 25% upgrade value / seal penalty.
               </p>
             </li>
           </ol>
